v1.1.0/modules/schema/pages/class/InterrupterUnit.adoc
= `InterrupterUnit`
:toclevels: 4


+++Breaker interrupter.
Some interrupters have one fixed and one moving contact, some have 2 fixed contacts, some 2 moving contacts. An interrupter will have relationships with 2 bushings and those relationships may be any combination of the FixedContact and MovingContact associations.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:InterrupterUnit`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Asset.adoc[`Asset`]
*** *`InterrupterUnit`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<Bushing,`Bushing`>>
//| [[slots_table.Bushing]]<<Bushing,`Bushing`>>
| 0..* +
xref::class/Bushing.adoc[`Bushing`]
| +++Bushing(s) to which the fixed contact(s) of this interrupter is(are) attached. Some interrupters have one fixed and one...+++
| _n/a_

| <<OperatingMechanism,`OperatingMechanism`>>
//| [[slots_table.OperatingMechanism]]<<OperatingMechanism,`OperatingMechanism`>>
| 0..1 +
xref::class/OperatingMechanism.adoc[`OperatingMechanism`]
| +++Breaker mechanism controlling this interrupter.+++
| _n/a_

| <<ActivityRecords,`ActivityRecords`>>
//| [[slots_table.ActivityRecords]]<<ActivityRecords,`ActivityRecords`>>
| 0..* +
xref::class/ActivityRecord.adoc[`ActivityRecord`]
| +++All activity records created for this asset.+++
| xref::class/Asset.adoc[`Asset`]

| <<Analytic,`Analytic`>>
//| [[slots_table.Analytic]]<<Analytic,`Analytic`>>
| 0..* +
xref::class/Analytic.adoc[`Analytic`]
| +++Analytic performed on this asset.+++
| xref::class/Asset.adoc[`Asset`]

| <<AnalyticScore,`AnalyticScore`>>
//| [[slots_table.AnalyticScore]]<<AnalyticScore,`AnalyticScore`>>
| 0..* +
xref::class/AnalyticScore.adoc[`AnalyticScore`]
| +++Analytic result related to this asset.+++
| xref::class/Asset.adoc[`Asset`]

| <<AssetContainer,`AssetContainer`>>
//| [[slots_table.AssetContainer]]<<AssetContainer,`AssetContainer`>>
| 0..1 +
xref::class/AssetContainer.adoc[`AssetContainer`]
| +++Container of this asset.+++
| xref::class/Asset.adoc[`Asset`]

| <<AssetDeployment,`AssetDeployment`>>
//| [[slots_table.AssetDeployment]]<<AssetDeployment,`AssetDeployment`>>
| 0..1 +
xref::class/AssetDeployment.adoc[`AssetDeployment`]
| +++This asset's deployment.+++
| xref::class/Asset.adoc[`Asset`]

| <<AssetFunction,`AssetFunction`>>
//| [[slots_table.AssetFunction]]<<AssetFunction,`AssetFunction`>>
| 0..* +
xref::class/AssetFunction.adoc[`AssetFunction`]
| +++Function performed by this asset.+++
| xref::class/Asset.adoc[`Asset`]

| <<AssetGroup,`AssetGroup`>>
//| [[slots_table.AssetGroup]]<<AssetGroup,`AssetGroup`>>
| 0..* +
xref::class/AssetGroup.adoc[`AssetGroup`]
| +++Asset group of which this asset is a part.+++
| xref::class/Asset.adoc[`Asset`]

| <<AssetInfo,`AssetInfo`>>
//| [[slots_table.AssetInfo]]<<AssetInfo,`AssetInfo`>>
| 0..1 +
xref::class/AssetInfo.adoc[`AssetInfo`]
| +++Data applicable to this asset.+++
| xref::class/Asset.adoc[`Asset`]

| <<AssetPropertyCurves,`AssetPropertyCurves`>>
//| [[slots_table.AssetPropertyCurves]]<<AssetPropertyCurves,`AssetPropertyCurves`>>
| 0..* +
xref::class/AssetPropertyCurve.adoc[`AssetPropertyCurve`]
| _n/a_
| xref::class/Asset.adoc[`Asset`]

| <<BreakerOperation,`BreakerOperation`>>
//| [[slots_table.BreakerOperation]]<<BreakerOperation,`BreakerOperation`>>
| 0..1 +
xref::class/SwitchOperationSummary.adoc[`SwitchOperationSummary`]
| +++Breaker operation information for this breaker.+++
| xref::class/Asset.adoc[`Asset`]

| <<ConfigurationEvents,`ConfigurationEvents`>>
//| [[slots_table.ConfigurationEvents]]<<ConfigurationEvents,`ConfigurationEvents`>>
| 0..* +
xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this asset.+++
| xref::class/Asset.adoc[`Asset`]

| <<ErpInventory,`ErpInventory`>>
//| [[slots_table.ErpInventory]]<<ErpInventory,`ErpInventory`>>
| 0..1 +
xref::class/ErpInventory.adoc[`ErpInventory`]
| _n/a_
| xref::class/Asset.adoc[`Asset`]

| <<ErpItemMaster,`ErpItemMaster`>>
//| [[slots_table.ErpItemMaster]]<<ErpItemMaster,`ErpItemMaster`>>
| 0..1 +
xref::class/ErpItemMaster.adoc[`ErpItemMaster`]
| _n/a_
| xref::class/Asset.adoc[`Asset`]

| <<ErpRecDeliveryItems,`ErpRecDeliveryItems`>>
//| [[slots_table.ErpRecDeliveryItems]]<<ErpRecDeliveryItems,`ErpRecDeliveryItems`>>
| 0..* +
xref::class/ErpRecDelvLineItem.adoc[`ErpRecDelvLineItem`]
| _n/a_
| xref::class/Asset.adoc[`Asset`]

| <<FinancialInfo,`FinancialInfo`>>
//| [[slots_table.FinancialInfo]]<<FinancialInfo,`FinancialInfo`>>
| 0..1 +
xref::class/FinancialInfo.adoc[`FinancialInfo`]
| +++Financial information related to this asset.+++
| xref::class/Asset.adoc[`Asset`]

| <<Incident,`Incident`>>
//| [[slots_table.Incident]]<<Incident,`Incident`>>
| 0..* +
xref::class/Incident.adoc[`Incident`]
| _n/a_
| xref::class/Asset.adoc[`Asset`]

| <<Location,`Location`>>
//| [[slots_table.Location]]<<Location,`Location`>>
| 0..1 +
xref::class/Location.adoc[`Location`]
| +++Location of this asset.+++
| xref::class/Asset.adoc[`Asset`]

| <<Measurements,`Measurements`>>
//| [[slots_table.Measurements]]<<Measurements,`Measurements`>>
| 0..* +
xref::class/Measurement.adoc[`Measurement`]
| +++Measurement related to this asset.+++
| xref::class/Asset.adoc[`Asset`]

| <<Medium,`Medium`>>
//| [[slots_table.Medium]]<<Medium,`Medium`>>
| 0..* +
xref::class/Medium.adoc[`Medium`]
| +++Medium with which this asset is filled.+++
| xref::class/Asset.adoc[`Asset`]

| <<OperationalTags,`OperationalTags`>>
//| [[slots_table.OperationalTags]]<<OperationalTags,`OperationalTags`>>
| 0..* +
xref::class/OperationalTag.adoc[`OperationalTag`]
| +++All operational tags placed on this asset.+++
| xref::class/Asset.adoc[`Asset`]

| <<OrganisationRoles,`OrganisationRoles`>>
//| [[slots_table.OrganisationRoles]]<<OrganisationRoles,`OrganisationRoles`>>
| 0..* +
xref::class/AssetOrganisationRole.adoc[`AssetOrganisationRole`]
| +++All roles an organisation plays for this asset.+++
| xref::class/Asset.adoc[`Asset`]

| <<Ownerships,`Ownerships`>>
//| [[slots_table.Ownerships]]<<Ownerships,`Ownerships`>>
| 0..* +
xref::class/Ownership.adoc[`Ownership`]
| +++All ownerships of this asset.+++
| xref::class/Asset.adoc[`Asset`]

| <<PowerSystemResources,`PowerSystemResources`>>
//| [[slots_table.PowerSystemResources]]<<PowerSystemResources,`PowerSystemResources`>>
| 0..* +
xref::class/PowerSystemResource.adoc[`PowerSystemResource`]
| +++All power system resources used to electrically model this asset. For example, transformer asset is electrically modelled...+++
| xref::class/Asset.adoc[`Asset`]

| <<ProcedureDataSet,`ProcedureDataSet`>>
//| [[slots_table.ProcedureDataSet]]<<ProcedureDataSet,`ProcedureDataSet`>>
| 0..* +
xref::class/ProcedureDataSet.adoc[`ProcedureDataSet`]
| +++Procedure data set that applies to this asset.+++
| xref::class/Asset.adoc[`Asset`]

| <<Procedures,`Procedures`>>
//| [[slots_table.Procedures]]<<Procedures,`Procedures`>>
| 0..* +
xref::class/Procedure.adoc[`Procedure`]
| +++All procedures applicable to this asset.+++
| xref::class/Asset.adoc[`Asset`]

| <<ProductAssetModel,`ProductAssetModel`>>
//| [[slots_table.ProductAssetModel]]<<ProductAssetModel,`ProductAssetModel`>>
| 0..1 +
xref::class/ProductAssetModel.adoc[`ProductAssetModel`]
| +++The model of this asset.+++
| xref::class/Asset.adoc[`Asset`]

| <<Reconditionings,`Reconditionings`>>
//| [[slots_table.Reconditionings]]<<Reconditionings,`Reconditionings`>>
| 0..* +
xref::class/Reconditioning.adoc[`Reconditioning`]
| _n/a_
| xref::class/Asset.adoc[`Asset`]

| <<ReliabilityInfos,`ReliabilityInfos`>>
//| [[slots_table.ReliabilityInfos]]<<ReliabilityInfos,`ReliabilityInfos`>>
| 0..* +
xref::class/ReliabilityInfo.adoc[`ReliabilityInfo`]
| _n/a_
| xref::class/Asset.adoc[`Asset`]

| <<ReplacementWorkTasks,`ReplacementWorkTasks`>>
//| [[slots_table.ReplacementWorkTasks]]<<ReplacementWorkTasks,`ReplacementWorkTasks`>>
| 0..* +
xref::class/WorkTask.adoc[`WorkTask`]
| +++All work tasks on replacement of this old asset.+++
| xref::class/Asset.adoc[`Asset`]

| <<ScheduledEvents,`ScheduledEvents`>>
//| [[slots_table.ScheduledEvents]]<<ScheduledEvents,`ScheduledEvents`>>
| 0..* +
xref::class/ScheduledEvent.adoc[`ScheduledEvent`]
| +++Scheduled event related to this asset.+++
| xref::class/Asset.adoc[`Asset`]

| <<ServiceLocation,`ServiceLocation`>>
//| [[slots_table.ServiceLocation]]<<ServiceLocation,`ServiceLocation`>>
| 0..1 +
xref::class/ServiceLocation.adoc[`ServiceLocation`]
| +++The sevice location at which the assets exist+++
| xref::class/Asset.adoc[`Asset`]

| <<WorkTasks,`WorkTasks`>>
//| [[slots_table.WorkTasks]]<<WorkTasks,`WorkTasks`>>
| 0..* +
xref::class/WorkTask.adoc[`WorkTask`]
| +++All non-replacement work tasks performed on this asset.+++
| xref::class/Asset.adoc[`Asset`]

| <<acceptanceTest,`acceptanceTest`>>
//| [[slots_table.acceptanceTest]]<<acceptanceTest,`acceptanceTest`>>
| 0..1 +
xref::class/AcceptanceTest.adoc[`AcceptanceTest`]
| +++Information on acceptance test.+++
| xref::class/Asset.adoc[`Asset`]

| <<critical,`critical`>>
//| [[slots_table.critical]]<<critical,`critical`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++True if asset is considered critical for some reason (for example, a pole with critical attachments).+++
| xref::class/Asset.adoc[`Asset`]

| <<electronicAddress,`electronicAddress`>>
//| [[slots_table.electronicAddress]]<<electronicAddress,`electronicAddress`>>
| 0..1 +
xref::class/ElectronicAddress.adoc[`ElectronicAddress`]
| +++Electronic address.+++
| xref::class/Asset.adoc[`Asset`]

| <<inUseDate,`inUseDate`>>
//| [[slots_table.inUseDate]]<<inUseDate,`inUseDate`>>
| 0..1 +
xref::class/InUseDate.adoc[`InUseDate`]
| +++In use dates for this asset.+++
| xref::class/Asset.adoc[`Asset`]

| <<inUseState,`inUseState`>>
//| [[slots_table.inUseState]]<<inUseState,`inUseState`>>
| 0..1 +
xref::enumeration/InUseStateKind.adoc[`InUseStateKind`]
| +++Indication of whether asset is currently deployed (in use), ready to be put into use or not available for use.+++
| xref::class/Asset.adoc[`Asset`]

| <<initialCondition,`initialCondition`>>
//| [[slots_table.initialCondition]]<<initialCondition,`initialCondition`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Condition of asset at last baseline. Examples include new, rebuilt, overhaul required, other. Refer to inspection data for...+++
| xref::class/Asset.adoc[`Asset`]

| <<initialLossOfLife,`initialLossOfLife`>>
//| [[slots_table.initialLossOfLife]]<<initialLossOfLife,`initialLossOfLife`>>
| 0..1 +
xref::class/PerCent.adoc[`PerCent`]
| +++Percentage of initial life expectancy that has been lost as of the last life expectancy baseline. Represents 
(initial life...+++
| xref::class/Asset.adoc[`Asset`]

| <<kind,`kind`>>
//| [[slots_table.kind]]<<kind,`kind`>>
| 0..1 +
xref::enumeration/AssetKind.adoc[`AssetKind`]
| +++Kind of asset. Used in description of asset components in asset instance templates.+++
| xref::class/Asset.adoc[`Asset`]

| <<lifecycleDate,`lifecycleDate`>>
//| [[slots_table.lifecycleDate]]<<lifecycleDate,`lifecycleDate`>>
| 0..1 +
xref::class/LifecycleDate.adoc[`LifecycleDate`]
| +++<was lifecycle>
Lifecycle dates for this asset.+++
| xref::class/Asset.adoc[`Asset`]

| <<lifecycleState,`lifecycleState`>>
//| [[slots_table.lifecycleState]]<<lifecycleState,`lifecycleState`>>
| 0..1 +
xref::enumeration/AssetLifecycleStateKind.adoc[`AssetLifecycleStateKind`]
| +++Current lifecycle state of asset.+++
| xref::class/Asset.adoc[`Asset`]

| <<lotNumber,`lotNumber`>>
//| [[slots_table.lotNumber]]<<lotNumber,`lotNumber`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Lot number for this asset. Even for the same model and version number, many assets are manufactured in lots.+++
| xref::class/Asset.adoc[`Asset`]

| <<position,`position`>>
//| [[slots_table.position]]<<position,`position`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Position of asset or asset component. May often be in relation to other assets or components.+++
| xref::class/Asset.adoc[`Asset`]

| <<purchasePrice,`purchasePrice`>>
//| [[slots_table.purchasePrice]]<<purchasePrice,`purchasePrice`>>
| 0..1 +
xref::class/Money.adoc[`Money`]
| +++Purchase price of asset.+++
| xref::class/Asset.adoc[`Asset`]

| <<retiredReason,`retiredReason`>>
//| [[slots_table.retiredReason]]<<retiredReason,`retiredReason`>>
| 0..1 +
xref::enumeration/RetiredReasonKind.adoc[`RetiredReasonKind`]
| +++Reason asset retired.+++
| xref::class/Asset.adoc[`Asset`]

| <<serialNumber,`serialNumber`>>
//| [[slots_table.serialNumber]]<<serialNumber,`serialNumber`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Serial number of this asset.+++
| xref::class/Asset.adoc[`Asset`]

| <<status,`status`>>
//| [[slots_table.status]]<<status,`status`>>
| 0..1 +
xref::class/Status.adoc[`Status`]
| +++Status of this asset.+++
| xref::class/Asset.adoc[`Asset`]

| <<type,`type`>>
//| [[slots_table.type]]<<type,`type`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Utility-specific classification of Asset and its subtypes, according to their corporate standards, practices, and existing...+++
| xref::class/Asset.adoc[`Asset`]

| <<utcNumber,`utcNumber`>>
//| [[slots_table.utcNumber]]<<utcNumber,`utcNumber`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Uniquely tracked commodity (UTC) number.+++
| xref::class/Asset.adoc[`Asset`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#acceptanceTest]
=== `acceptanceTest`
+++Information on acceptance test.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.acceptanceTest`
| Cardinality
| 0..1
| Type
| xref::class/AcceptanceTest.adoc[`AcceptanceTest`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.acceptanceTest,&#10548;>>
--
////


//[discrete]
[#ActivityRecords]
=== `ActivityRecords`
+++All activity records created for this asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.ActivityRecords`
| Cardinality
| 0..*
| Type
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.ActivityRecords,&#10548;>>
--
////


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#Analytic]
=== `Analytic`
+++Analytic performed on this asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.Analytic`
| Cardinality
| 0..*
| Type
| xref::class/Analytic.adoc[`Analytic`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.Analytic,&#10548;>>
--
////


//[discrete]
[#AnalyticScore]
=== `AnalyticScore`
+++Analytic result related to this asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.AnalyticScore`
| Cardinality
| 0..*
| Type
| xref::class/AnalyticScore.adoc[`AnalyticScore`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.AnalyticScore,&#10548;>>
--
////


//[discrete]
[#AssetContainer]
=== `AssetContainer`
+++Container of this asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.AssetContainer`
| Cardinality
| 0..1
| Type
| xref::class/AssetContainer.adoc[`AssetContainer`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.AssetContainer,&#10548;>>
--
////


//[discrete]
[#AssetDeployment]
=== `AssetDeployment`
+++This asset's deployment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.AssetDeployment`
| Cardinality
| 0..1
| Type
| xref::class/AssetDeployment.adoc[`AssetDeployment`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.AssetDeployment,&#10548;>>
--
////


//[discrete]
[#AssetFunction]
=== `AssetFunction`
+++Function performed by this asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.AssetFunction`
| Cardinality
| 0..*
| Type
| xref::class/AssetFunction.adoc[`AssetFunction`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.AssetFunction,&#10548;>>
--
////


//[discrete]
[#AssetGroup]
=== `AssetGroup`
+++Asset group of which this asset is a part.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.AssetGroup`
| Cardinality
| 0..*
| Type
| xref::class/AssetGroup.adoc[`AssetGroup`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.AssetGroup,&#10548;>>
--
////


//[discrete]
[#AssetInfo]
=== `AssetInfo`
+++Data applicable to this asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.AssetInfo`
| Cardinality
| 0..1
| Type
| xref::class/AssetInfo.adoc[`AssetInfo`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.AssetInfo,&#10548;>>
--
////


//[discrete]
[#AssetPropertyCurves]
=== `AssetPropertyCurves`



[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.AssetPropertyCurves`
| Cardinality
| 0..*
| Type
| xref::class/AssetPropertyCurve.adoc[`AssetPropertyCurve`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.AssetPropertyCurves,&#10548;>>
--
////


//[discrete]
[#BreakerOperation]
=== `BreakerOperation`
+++Breaker operation information for this breaker.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.BreakerOperation`
| Cardinality
| 0..1
| Type
| xref::class/SwitchOperationSummary.adoc[`SwitchOperationSummary`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.BreakerOperation,&#10548;>>
--
////


//[discrete]
[#Bushing]
=== `Bushing`
+++Bushing(s) to which the fixed contact(s) of this interrupter is(are) attached. Some interrupters have one fixed and one moving contact, some have 2 fixed contacts, some 2 moving contacts. An interrupter will have relationships with 2 bushings and those relationships may be any combination of the FixedContact and MovingContact associations.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:InterrupterUnit.Bushing`
| Cardinality
| 0..*
| Type
| xref::class/Bushing.adoc[`Bushing`]


|===

////
[.text-left]
--
<<slots_table.Bushing,&#10548;>>
--
////


//[discrete]
[#ConfigurationEvents]
=== `ConfigurationEvents`
+++All configuration events created for this asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.ConfigurationEvents`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.ConfigurationEvents,&#10548;>>
--
////


//[discrete]
[#critical]
=== `critical`
+++True if asset is considered critical for some reason (for example, a pole with critical attachments).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.critical`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.critical,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#electronicAddress]
=== `electronicAddress`
+++Electronic address.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.electronicAddress`
| Cardinality
| 0..1
| Type
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.electronicAddress,&#10548;>>
--
////


//[discrete]
[#ErpInventory]
=== `ErpInventory`



[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.ErpInventory`
| Cardinality
| 0..1
| Type
| xref::class/ErpInventory.adoc[`ErpInventory`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.ErpInventory,&#10548;>>
--
////


//[discrete]
[#ErpItemMaster]
=== `ErpItemMaster`



[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.ErpItemMaster`
| Cardinality
| 0..1
| Type
| xref::class/ErpItemMaster.adoc[`ErpItemMaster`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.ErpItemMaster,&#10548;>>
--
////


//[discrete]
[#ErpRecDeliveryItems]
=== `ErpRecDeliveryItems`



[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.ErpRecDeliveryItems`
| Cardinality
| 0..*
| Type
| xref::class/ErpRecDelvLineItem.adoc[`ErpRecDelvLineItem`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.ErpRecDeliveryItems,&#10548;>>
--
////


//[discrete]
[#FinancialInfo]
=== `FinancialInfo`
+++Financial information related to this asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.FinancialInfo`
| Cardinality
| 0..1
| Type
| xref::class/FinancialInfo.adoc[`FinancialInfo`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.FinancialInfo,&#10548;>>
--
////


//[discrete]
[#Incident]
=== `Incident`



[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.Incident`
| Cardinality
| 0..*
| Type
| xref::class/Incident.adoc[`Incident`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.Incident,&#10548;>>
--
////


//[discrete]
[#initialCondition]
=== `initialCondition`
+++Condition of asset at last baseline. Examples include new, rebuilt, overhaul required, other. Refer to inspection data for information on the most current condition of the asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.initialCondition`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.initialCondition,&#10548;>>
--
////


//[discrete]
[#initialLossOfLife]
=== `initialLossOfLife`
+++Percentage of initial life expectancy that has been lost as of the last life expectancy baseline. Represents 
(initial life expectancy - current life expectancy) / initial life expectancy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.initialLossOfLife`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.initialLossOfLife,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#inUseDate]
=== `inUseDate`
+++In use dates for this asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.inUseDate`
| Cardinality
| 0..1
| Type
| xref::class/InUseDate.adoc[`InUseDate`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.inUseDate,&#10548;>>
--
////


//[discrete]
[#inUseState]
=== `inUseState`
+++Indication of whether asset is currently deployed (in use), ready to be put into use or not available for use.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.inUseState`
| Cardinality
| 0..1
| Type
| xref::enumeration/InUseStateKind.adoc[`InUseStateKind`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.inUseState,&#10548;>>
--
////


//[discrete]
[#kind]
=== `kind`
+++Kind of asset. Used in description of asset components in asset instance templates.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.kind`
| Cardinality
| 0..1
| Type
| xref::enumeration/AssetKind.adoc[`AssetKind`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.kind,&#10548;>>
--
////


//[discrete]
[#lifecycleDate]
=== `lifecycleDate`
+++<was lifecycle>
Lifecycle dates for this asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.lifecycleDate`
| Cardinality
| 0..1
| Type
| xref::class/LifecycleDate.adoc[`LifecycleDate`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.lifecycleDate,&#10548;>>
--
////


//[discrete]
[#lifecycleState]
=== `lifecycleState`
+++Current lifecycle state of asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.lifecycleState`
| Cardinality
| 0..1
| Type
| xref::enumeration/AssetLifecycleStateKind.adoc[`AssetLifecycleStateKind`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.lifecycleState,&#10548;>>
--
////


//[discrete]
[#Location]
=== `Location`
+++Location of this asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.Location`
| Cardinality
| 0..1
| Type
| xref::class/Location.adoc[`Location`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.Location,&#10548;>>
--
////


//[discrete]
[#lotNumber]
=== `lotNumber`
+++Lot number for this asset. Even for the same model and version number, many assets are manufactured in lots.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.lotNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.lotNumber,&#10548;>>
--
////


//[discrete]
[#Measurements]
=== `Measurements`
+++Measurement related to this asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.Measurements`
| Cardinality
| 0..*
| Type
| xref::class/Measurement.adoc[`Measurement`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.Measurements,&#10548;>>
--
////


//[discrete]
[#Medium]
=== `Medium`
+++Medium with which this asset is filled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.Medium`
| Cardinality
| 0..*
| Type
| xref::class/Medium.adoc[`Medium`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.Medium,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#OperatingMechanism]
=== `OperatingMechanism`
+++Breaker mechanism controlling this interrupter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:InterrupterUnit.OperatingMechanism`
| Cardinality
| 0..1
| Type
| xref::class/OperatingMechanism.adoc[`OperatingMechanism`]


|===

////
[.text-left]
--
<<slots_table.OperatingMechanism,&#10548;>>
--
////


//[discrete]
[#OperationalTags]
=== `OperationalTags`
+++All operational tags placed on this asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.OperationalTags`
| Cardinality
| 0..*
| Type
| xref::class/OperationalTag.adoc[`OperationalTag`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.OperationalTags,&#10548;>>
--
////


//[discrete]
[#OrganisationRoles]
=== `OrganisationRoles`
+++All roles an organisation plays for this asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.OrganisationRoles`
| Cardinality
| 0..*
| Type
| xref::class/AssetOrganisationRole.adoc[`AssetOrganisationRole`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.OrganisationRoles,&#10548;>>
--
////


//[discrete]
[#Ownerships]
=== `Ownerships`
+++All ownerships of this asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.Ownerships`
| Cardinality
| 0..*
| Type
| xref::class/Ownership.adoc[`Ownership`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.Ownerships,&#10548;>>
--
////


//[discrete]
[#position]
=== `position`
+++Position of asset or asset component. May often be in relation to other assets or components.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.position`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.position,&#10548;>>
--
////


//[discrete]
[#PowerSystemResources]
=== `PowerSystemResources`
+++All power system resources used to electrically model this asset. For example, transformer asset is electrically modelled with a transformer and its windings and tap changer.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.PowerSystemResources`
| Cardinality
| 0..*
| Type
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.PowerSystemResources,&#10548;>>
--
////


//[discrete]
[#ProcedureDataSet]
=== `ProcedureDataSet`
+++Procedure data set that applies to this asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.ProcedureDataSet`
| Cardinality
| 0..*
| Type
| xref::class/ProcedureDataSet.adoc[`ProcedureDataSet`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.ProcedureDataSet,&#10548;>>
--
////


//[discrete]
[#Procedures]
=== `Procedures`
+++All procedures applicable to this asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.Procedures`
| Cardinality
| 0..*
| Type
| xref::class/Procedure.adoc[`Procedure`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.Procedures,&#10548;>>
--
////


//[discrete]
[#ProductAssetModel]
=== `ProductAssetModel`
+++The model of this asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.ProductAssetModel`
| Cardinality
| 0..1
| Type
| xref::class/ProductAssetModel.adoc[`ProductAssetModel`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.ProductAssetModel,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#purchasePrice]
=== `purchasePrice`
+++Purchase price of asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.purchasePrice`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.purchasePrice,&#10548;>>
--
////


//[discrete]
[#Reconditionings]
=== `Reconditionings`



[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.Reconditionings`
| Cardinality
| 0..*
| Type
| xref::class/Reconditioning.adoc[`Reconditioning`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.Reconditionings,&#10548;>>
--
////


//[discrete]
[#ReliabilityInfos]
=== `ReliabilityInfos`



[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.ReliabilityInfos`
| Cardinality
| 0..*
| Type
| xref::class/ReliabilityInfo.adoc[`ReliabilityInfo`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.ReliabilityInfos,&#10548;>>
--
////


//[discrete]
[#ReplacementWorkTasks]
=== `ReplacementWorkTasks`
+++All work tasks on replacement of this old asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.ReplacementWorkTasks`
| Cardinality
| 0..*
| Type
| xref::class/WorkTask.adoc[`WorkTask`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.ReplacementWorkTasks,&#10548;>>
--
////


//[discrete]
[#retiredReason]
=== `retiredReason`
+++Reason asset retired.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.retiredReason`
| Cardinality
| 0..1
| Type
| xref::enumeration/RetiredReasonKind.adoc[`RetiredReasonKind`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.retiredReason,&#10548;>>
--
////


//[discrete]
[#ScheduledEvents]
=== `ScheduledEvents`
+++Scheduled event related to this asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.ScheduledEvents`
| Cardinality
| 0..*
| Type
| xref::class/ScheduledEvent.adoc[`ScheduledEvent`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.ScheduledEvents,&#10548;>>
--
////


//[discrete]
[#serialNumber]
=== `serialNumber`
+++Serial number of this asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.serialNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.serialNumber,&#10548;>>
--
////


//[discrete]
[#ServiceLocation]
=== `ServiceLocation`
+++The sevice location at which the assets exist+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.ServiceLocation`
| Cardinality
| 0..1
| Type
| xref::class/ServiceLocation.adoc[`ServiceLocation`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.ServiceLocation,&#10548;>>
--
////


//[discrete]
[#status]
=== `status`
+++Status of this asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.status,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#type]
=== `type`
+++Utility-specific classification of Asset and its subtypes, according to their corporate standards, practices, and existing IT systems (e.g., for management of assets, maintenance, work, outage, customers, etc.).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.type`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.type,&#10548;>>
--
////


//[discrete]
[#utcNumber]
=== `utcNumber`
+++Uniquely tracked commodity (UTC) number.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.utcNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.utcNumber,&#10548;>>
--
////


//[discrete]
[#WorkTasks]
=== `WorkTasks`
+++All non-replacement work tasks performed on this asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Asset.WorkTasks`
| Cardinality
| 0..*
| Type
| xref::class/WorkTask.adoc[`WorkTask`]

| Inherited from
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.WorkTasks,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/Bushing.adoc[`Bushing`] | xref::class/Bushing.adoc#FixedContact[`FixedContact`]



| xref::class/OperatingMechanism.adoc[`OperatingMechanism`] | xref::class/OperatingMechanism.adoc#InterrupterUnit[`InterrupterUnit`]


|===

